; ModuleID = '/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_do_send.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_do_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.simple_data = type { i8* }
%struct.mg_connection = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.simple_data*, %struct.mg_connection*)* @do_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_send(%struct.simple_data* %0, %struct.mg_connection* %1) #0 {
  %3 = alloca %struct.simple_data*, align 8
  %4 = alloca %struct.mg_connection*, align 8
  store %struct.simple_data* %0, %struct.simple_data** %3, align 8
  store %struct.mg_connection* %1, %struct.mg_connection** %4, align 8
  %5 = load %struct.simple_data*, %struct.simple_data** %3, align 8
  %6 = getelementptr inbounds %struct.simple_data, %struct.simple_data* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = getelementptr inbounds i8, i8* %7, i64 0
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %2
  %13 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %14 = load %struct.simple_data*, %struct.simple_data** %3, align 8
  %15 = getelementptr inbounds %struct.simple_data, %struct.simple_data* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @mg_printf(%struct.mg_connection* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %16)
  br label %18

18:                                               ; preds = %12, %2
  ret void
}

declare dso_local i32 @mg_printf(%struct.mg_connection*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
